--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 .bg-image {
-  background-size: fluid;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
