--- a/style.scss
+++ b/style.scss
@@ -12,7 +12,7 @@ $theme-colors: (
 );
 
 .bg-image{
-    background-size: fluid;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
   }
