background pictures test

--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 $theme-colors: (
     "primary":blue,
-    "secondary": grey,
+    "secondary": rgb(196, 184, 184),
     "success": #A7BEAE,
     "danger": #B85042,
     "warning": #E7E8D1,
