--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: blue;
-  --bs-secondary: grey;
+  --bs-secondary: rgb(196, 184, 184);
   --bs-success: #A7BEAE;
   --bs-danger: #B85042;
   --bs-warning: #E7E8D1;
@@ -46,7 +46,7 @@
   --bs-muted: grey;
   --bs-white: white;
   --bs-primary-rgb: 0, 0, 255;
-  --bs-secondary-rgb: 128, 128, 128;
+  --bs-secondary-rgb: 196, 184, 184;
   --bs-success-rgb: 167, 190, 174;
   --bs-danger-rgb: 184, 80, 66;
   --bs-warning-rgb: 231, 232, 209;
@@ -2924,19 +2924,19 @@ textarea.form-control-lg {
 
 .btn-secondary {
   --bs-btn-color: #000;
-  --bs-btn-bg: grey;
-  --bs-btn-border-color: grey;
+  --bs-btn-bg: rgb(196, 184, 184);
+  --bs-btn-border-color: rgb(196, 184, 184);
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #939393;
-  --bs-btn-hover-border-color: #8d8d8d;
-  --bs-btn-focus-shadow-rgb: 109, 109, 109;
+  --bs-btn-hover-bg: #cdc3c3;
+  --bs-btn-hover-border-color: #cabfbf;
+  --bs-btn-focus-shadow-rgb: 167, 156, 156;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #999999;
-  --bs-btn-active-border-color: #8d8d8d;
+  --bs-btn-active-bg: #d0c6c6;
+  --bs-btn-active-border-color: #cabfbf;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: grey;
-  --bs-btn-disabled-border-color: grey;
+  --bs-btn-disabled-bg: rgb(196, 184, 184);
+  --bs-btn-disabled-border-color: rgb(196, 184, 184);
 }
 
 .btn-success {
@@ -3093,19 +3093,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-secondary {
-  --bs-btn-color: grey;
-  --bs-btn-border-color: grey;
+  --bs-btn-color: rgb(196, 184, 184);
+  --bs-btn-border-color: rgb(196, 184, 184);
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: grey;
-  --bs-btn-hover-border-color: grey;
-  --bs-btn-focus-shadow-rgb: 128, 128, 128;
+  --bs-btn-hover-bg: rgb(196, 184, 184);
+  --bs-btn-hover-border-color: rgb(196, 184, 184);
+  --bs-btn-focus-shadow-rgb: 196, 184, 184;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: grey;
-  --bs-btn-active-border-color: grey;
+  --bs-btn-active-bg: rgb(196, 184, 184);
+  --bs-btn-active-border-color: rgb(196, 184, 184);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: grey;
+  --bs-btn-disabled-color: rgb(196, 184, 184);
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: grey;
+  --bs-btn-disabled-border-color: rgb(196, 184, 184);
   --bs-gradient: none;
 }
 
@@ -4795,12 +4795,12 @@ textarea.form-control-lg {
 }
 
 .alert-secondary {
-  --bs-alert-color: #4d4d4d;
-  --bs-alert-bg: #e6e6e6;
-  --bs-alert-border-color: #d9d9d9;
+  --bs-alert-color: #4e4a4a;
+  --bs-alert-bg: #f3f1f1;
+  --bs-alert-border-color: #edeaea;
 }
 .alert-secondary .alert-link {
-  color: #3e3e3e;
+  color: #3e3b3b;
 }
 
 .alert-success {
@@ -5190,17 +5190,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-secondary {
-  color: #4d4d4d;
-  background-color: #e6e6e6;
+  color: #4e4a4a;
+  background-color: #f3f1f1;
 }
 .list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
-  color: #4d4d4d;
-  background-color: #cfcfcf;
+  color: #4e4a4a;
+  background-color: #dbd9d9;
 }
 .list-group-item-secondary.list-group-item-action.active {
   color: #fff;
-  background-color: #4d4d4d;
-  border-color: #4d4d4d;
+  background-color: #4e4a4a;
+  border-color: #4e4a4a;
 }
 
 .list-group-item-success {
@@ -6881,7 +6881,7 @@ textarea.form-control-lg {
 
 .text-bg-secondary {
   color: #000 !important;
-  background-color: RGBA(128, 128, 128, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(196, 184, 184, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-success {
@@ -6932,10 +6932,10 @@ textarea.form-control-lg {
 }
 
 .link-secondary {
-  color: grey !important;
+  color: rgb(196, 184, 184) !important;
 }
 .link-secondary:hover, .link-secondary:focus {
-  color: #999999 !important;
+  color: #d0c6c6 !important;
 }
 
 .link-success {
