--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,10 @@
 $theme-colors: (
-    "primary":blue,
+    "primary":#23b6f0,
     "secondary": rgb(196, 184, 184),
     "success": #A7BEAE,
     "danger": #B85042,
     "warning": #E7E8D1,
-    "info": brown,
+    "info": rgb(246, 226, 226),
     "light": white,
     "dark": black,
     "muted": grey,
